webgl motion tracking

--- a/index.html
+++ b/index.html
@@ -109,19 +109,28 @@ label{
 </div>
 <div id="info"></div>
 <script src="./lib/three.js"></script>
-<script src="lib/shaders/CopyShader.js"></script>
-<script src="lib/shaders/DotScreenShader.js"></script>
-<script src="lib/shaders/RGBShiftShader.js"></script>
-<script src="lib/shaders/KaleidoShader.js"></script>
-<script src="lib/shaders/DigitalGlitch.js"></script>
-<script src="lib/shaders/DotDifferenceShader.js"></script>
-<script src="lib/shaders/DifferenceShader.js"></script>
-<script src="lib/shaders/BlendShader.js"></script>
-<script src="lib/postprocessing/EffectComposer.js"></script>
-<script src="lib/postprocessing/RenderPass.js"></script>
-<script src="lib/postprocessing/MaskPass.js"></script>
-<script src="lib/postprocessing/ShaderPass.js"></script>
-<script src="lib/postprocessing/TexturePass.js"></script>
+<script src="./lib/shaders/CopyShader.js"></script>
+<script src="./lib/shaders/DotScreenShader.js"></script>
+<script src="./lib/shaders/ColorExperimentShader.js"></script>
+<script src="./lib/shaders/RGBShiftShader.js"></script>
+<script src="./lib/shaders/KaleidoWarpShader.js"></script>
+<script src="./lib/shaders/ColorEffectShader.js"></script>
+<script src="./lib/shaders/BlendShader.js"></script>
+<script src="./lib/shaders/FilmShader.js"></script>
+<script src="./lib/shaders/BrightnessContrastShader.js"></script>
+<script src="./lib/shaders/HueSaturationShader.js"></script>
+<script src="./lib/shaders/ColorCorrectionShader.js"></script>
+<script src="./lib/shaders/BlendMask.js"></script>
+<script src="./lib/shaders/GlassWarp.js"></script>
+<script src="./lib/shaders/Experiment.js"></script>
+<script src="./lib/shaders/CheckerBoard.js"></script>
+<script src="./lib/shaders/ASCII.js"></script>
+<script src="./lib/shaders/DifferenceMirrorShader.js"></script>
+<script src="./lib/postprocessing/EffectComposer.js"></script>
+<script src="./lib/postprocessing/RenderPass.js"></script>
+<script src="./lib/postprocessing/MaskPass.js"></script>
+<script src="./lib/postprocessing/ShaderPass.js"></script>
+<script src="./lib/postprocessing/TexturePass.js"></script>
   <script src="./compiled.js"></script>
 </body>
 </html>
